# fast-geoparquet-features

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  enums.py  main.py  models.py  pyproject.toml
app/: enums.py  main.py  models.py  serializers.py
data/: demo.geojson  height-filter-demo.geojson
dockerfiles/: Dockerfile
templates/: viewer.html
tests/: test_serializers.py
