[project]
name = "fast-geoparquet-features"
version = "0.1.0"
description = "FastAPI-based GeoParquet Feature Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cql2>=0.3.8",
    "duckdb>=1.4.0",
    "fastapi[standard]>=0.116.1",
    "geopandas>=1.1.1",
    "orjson>=3.11.3",
    "pyarrow>=21.0.0",
]
